Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-7998

Resource acquired to fd may be lost in mount_utils.c

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.9.0
    • None
    • 3
    • 9223372036854775807

      364			for (i = 0; i < MAX_LOOP_DEVICES; i++) {
      365				char cmd[PATH_MAX];
      366				int cmdsz = sizeof(cmd);
      367		 
      368		#ifdef HAVE_LOOP_CTL_GET_FREE
      369				ret = open("/dev/loop-control", O_RDWR);
      370				if (ret < 0) {...}
      374				/* find or allocate a free loop device to use */
      375				i = ioctl(ret, LOOP_CTL_GET_FREE);
      376				if (i < 0) {
      377					fprintf(stderr, "%s: access loop control error\n", progname);
      378					return EACCES;
      379				}
      

            dmiter Dmitry Eremin (Inactive)
            dmiter Dmitry Eremin (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: